--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,7 @@
     "framer-motion": "11.0.22",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.412.0",
-    "react": "latest",
+    "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.2.1",
